--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         Gravity Simulator
     </title>
     <script src='main.js'></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+    <script src="vendor/p5.min.js"></script>
+    <script src='vendor/p5.dom.min.js'></script>
 </head>
 <body>
 
